Modificati layout LOADING

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -16,7 +16,10 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <!-- <div id="app">Loading...</div> -->
+    <div id="app">
+        <center><img src="images/loading.gif"></center>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
